# faces

./: CMakeLists.txt  Index.cpp  Interface.md  README.md  build.py  build.sh  detail.hpp  distance.hpp  docker-compose.yml  find_sim_celebrities_debug.py  hnsw_index.cpp  index_compairing.py  make_request.py  make_request.sh
find_index_server/: setup.py
find_index_server/swagger_server/: __main__.py
find_index_server/swagger_server/controllers/: default_controller.py
find_index_server/swagger_server/models/: __init__.py  embedding.py
find_index_server/swagger_server/swagger/: swagger.yaml
hnsw/: bindings.cpp  distance.hpp  flat_map.hpp  index.cpp  setup.py  util.hpp
image_waiter_server/: Dockerfile  app.py  requirements.txt
image_waiter_server/image_waiter_server/: __main__.py  app.py  image_processor.py  img_processor.py  index_requester.py
image_waiter_server/templates/: index.html
include/cereal/: access.hpp
index/: CMakeLists.txt
index/hnsw/: bindings.cpp  index.cpp  index.hpp  setup.py  tests.cpp  util.hpp
index/include/cereal/: cereal.hpp
index/include/cereal/archives/: portable_binary.hpp
index/include/cereal/details/: polymorphic_impl.hpp  static_object.hpp  util.hpp
index/include/cereal/types/: base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  set.hpp  valarray.hpp  vector.hpp
index_search_server/: Dockerfile  requirements.txt
index_search_server/index_search_server/: __main__.py  app.py  index_search.py
python_bindings/: bindings.cpp  setup.py
(+21 files in other folders)
